[package]
name = "symbolserver"
version = "0.1.0"
authors = ["Sentry <daniel.griesser.86@gmail.com>"]

[dependencies]
serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"
memmap = "0.5.0"
brotli2 = "0.2.2"
error-chain = "0.9.0"
zip = "0.1.15"
walkdir = "0.1.5"
regex = "0.2.1"
lazy_static = "0.2.2"
mach_object = "0.1.1"
