[package]
name = "symbolserver"
version = "0.1.0"
authors = ["Sentry <daniel.griesser.86@gmail.com>"]

[dependencies]
serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"
serde_yaml = "^0.6.2"
serde_xml = "^0.9.1"
memmap = "^0.5.0"
brotli2 = "^0.2.2"
error-chain = "^0.9.0"
zip = "^0.1.15"
walkdir = "^0.1.5"
regex = "^0.2.1"
uuid = "^0.2"
lazy_static = "^0.2.2"
clap = "^2.20.5"
pbr = "^1.0.0-alpha.2"
xz2 = "^0.1.1"
tempfile = "^2.1.5"
humansize = "^1.0.0"
chrono = "0.2.25"
rusoto = { version = "0.22.0", features = ["s3"] }
mach_object = { git = "https://github.com/flier/rust-macho" }
