[package]
name = "sentry-symbolserver"
version = "1.8.0"
authors = ["Sentry <hello@getsentry.com>"]

[lib]
name = "libsymbolserver"
path = "src/lib.rs"

[[bin]]
name = "sentry-symbolserver"
path = "src/main.rs"
doc = false

[dependencies]
serde = "^0.9"
serde_derive = "^0.9"
serde_json = "^0.9"
serde_yaml = "^0.6.2"
serde_xml = "^0.9.1"
memmap = "^0.5.0"
brotli2 = "^0.2.2"
error-chain = "^0.9.0"
zip = "^0.1.15"
globset = "^0.1.3"
walkdir = "^0.1.5"
regex = "^0.2.1"
uuid = { version = "^0.4", features = ["serde"] }
lazy_static = "^0.2.2"
clap = "^2.20.5"
libc = "^0.2.20"
pbr = "^1.0.0-alpha.2"
xz2 = "^0.1.1"
tempfile = "^2.1.5"
humansize = "^1.0.0"
chrono = "^0.2.25"
hyper = "^0.10.4"
hyper-native-tls = "^0.2.2"
url = "^1.4.0"
md5 = "^0.3.3"
log = "^0.3.6"
rustc-serialize = "0.3.22"
if_chain = "^0.1.2"
num_cpus = "^1.2.1"
openssl-probe = "^0.1.0"
# We use our own version for now because of
#   https://github.com/rusoto/rusoto/pull/569
rusoto = { git = "https://github.com/mitsuhiko/rusoto", features = ["s3"] }
#mach_object = { git = "https://github.com/flier/rust-macho" }
mach_object = "^0.1.3"
